--- a/IPC2/css/style.css
+++ b/IPC2/css/style.css
@@ -2,17 +2,10 @@
     --fontHeading: 'PT Sans', sans-serif;
     --fontParrafo: 'Open Sans', sans-serif;
     
-    --fontprimary: rgb(0, 88, 188);
-    --fontsecondary: rgb(0, 32, 70);
-    --backDark: rgb(39, 39, 39);
     --primary: #0078ff;
-    --secondary: #0058bc;
     --verde: #42b72a;
-    --verdeLog: #379d23;
-    --verdeLogB: #267816;
     --rojo: #C03425;
-    --rojo1: #a5281b;
-    --gris: #919395;
+    --gris: #bbbdbf;
     --blanco: #fff;
     --negro: #000;
 }
@@ -28,10 +21,10 @@ body{
     font-size: 1.6rem;
     line-height: 2;
 }
-@media (prefers-color-scheme: dark) {
-    body { 
-        background: var(--backDark); 
-    }
+/*Globales*/
+.contenedor{
+    width: 100%;
+    margin: 0 auto;
 }
 a{
     text-decoration: none;
@@ -51,69 +44,6 @@ h3{
 h4{
     font-size: 2.8rem;
 }
-
-/*GLOBALS*/
-
-/*LOGIN*/
-.contenedor{
-    width: 100%;
-    margin: 0 auto;
-}
-.contentForm {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.formLogin {
-    background-color: var(--blanco);
-    display: grid;
-    border-radius: 1rem;
-    padding: 3rem;
-}
-.formTitle {
-    text-align: center;
-}
-.formTitle label {
-    color: var(--primary);
-    font-size: 3rem;
-}
-.input-text label {
-    color: var(--fontprimary);
-    font-size: 2rem;
-}
-.input-text {
-    padding-top: 2rem;
-}
-.input-text input {
-    color: var(--fontsecondary);
-    width: 100%;
-    outline: none;
-    height: 3.5rem;
-    border-radius: 0.4rem;
-    border: var(--gris) solid 0.1rem;
-}
-.button-login {
-    width: 100%;
-    padding-top: 3rem;
-}
-.button-login button {
-    width: 100%;
-    height: 4rem;
-    border-radius: 0.4rem;
-    background-color: var(--verdeLog);
-    border: var(--verdeLogB) solid 0.2rem;
-    color: var(--blanco);
-}
-.button-login button:hover {
-	cursor: pointer;
-    background-color: var(--verde);
-}
-
-/*HOME*/
 /*Utilidades*/
 .no-margin{
     margin: 0;
@@ -193,12 +123,12 @@ h4{
     display: flex;
     gap: 2rem;
     justify-content: flex-end;
+    margin: 2rem 2rem;
     gap: 2rem;
-    width: 100%;
 }
 .button{
     width: 100%;
-    border: var(--backDark) solid 2px;
+    border: 2px solid;
     padding: 1rem 3rem;
     text-align: center;
     text-decoration: none;
