--- a/Style/Style.css
+++ b/Style/Style.css
@@ -14,6 +14,7 @@
     --rojo1: #a5281b;
     --gris: #919395;
     --blanco: #fff;
+    --blancoH: #c3dfff;
     --negro: #000;
 }
 html{
@@ -112,7 +113,10 @@ h4{
     border: var(--verdeLogB) solid 0.2rem;
     color: var(--blanco);
 }
-.button-login button:hover {
+.button-login button:hover,
+.users button:hover,
+.authors button:hover,
+.books button:hover {
 	cursor: pointer;
     background-color: var(--verde);
 }
@@ -197,6 +201,9 @@ h4{
     text-align: center;
     font-size: 1.8rem;
     color: var(--blanco);
+}
+.navegacion__enlace:hover{
+    color: var(--blancoH);
 }
 .derecha{
     display: flex;
