--- a/Style/Style.css
+++ b/Style/Style.css
@@ -288,12 +288,13 @@ h4{
         grid-template-columns: repeat(3, 1fr);
         column-gap: 2rem;
     }
-    .cuatro-columnas {
+    .libro-columnas {
+        padding: 2rem;
         display: grid;
         /*grid-template-columns: 50% 50%;
         grid-template-columns: repeat(2, 50%);
         grid-template-columns: 1fr 1fr;*/
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(5,auto);
         column-gap: 1rem;
         row-gap: 1rem;
         align-content: flex-start;
