--- a/Style/Style.css
+++ b/Style/Style.css
@@ -294,7 +294,7 @@ h4{
         /*grid-template-columns: 50% 50%;
         grid-template-columns: repeat(2, 50%);
         grid-template-columns: 1fr 1fr;*/
-        grid-template-columns: repeat(5,auto);
+        grid-template-columns: repeat(5,1fr);
         column-gap: 1rem;
         row-gap: 1rem;
         align-content: flex-start;
