--- a/Style/Style.css
+++ b/Style/Style.css
@@ -485,6 +485,10 @@ footer button:hover {
     padding: 10px 30px;
     text-align: center;
 }
+.modal_autor_bio {
+    width: 100%;
+    height: 100%;
+}
 .modal_botones{
     width: 100%;    
     background: whitesmoke;
