--- a/Style/Style.css
+++ b/Style/Style.css
@@ -290,19 +290,7 @@ h4{
         grid-template-columns: repeat(3, 1fr);
         column-gap: 2rem;
     }
-    .libro-columnas {
-        padding: 2rem;
-        display: grid;
-        /*grid-template-columns: 50% 50%;
-        grid-template-columns: repeat(2, 50%);
-        grid-template-columns: 1fr 1fr;*/
-        grid-template-columns: repeat(3,1fr);
-        column-gap: 1rem;
-        row-gap: 1rem;
-        align-content: flex-start;
-    }
-    .autores-columnas,
-    .mislibro-columnas {
+    .mosaico {
         padding: 2rem;
         display: grid;
         /*grid-template-columns: 50% 50%;
@@ -313,6 +301,17 @@ h4{
         row-gap: 1rem;
         align-content: flex-start;
     }
+}
+.grafo {
+    background-repeat: no-repeat;
+    background-size: cover;
+    grid-column: 4 / 7;
+}
+.grafo--matriz {
+    grid-row: 1 / 4;
+}
+.grafo--arbol-binario {
+    grid-row: 1 / 6;
 }
 .input{
     outline: none;
