new color style

--- a/Style/Style.css
+++ b/Style/Style.css
@@ -11,6 +11,8 @@
     --thirdy: #0060cd;
     --celeste: #01ACC0;
     --celeste1: #00828D;
+    --agua: #26C98A;
+    --agua1: #00975E;
     --verde: #42b72a;
     --verdeLog: #379d23;
     --verdeLogB: #267816;
