--- a/Style/Style.css
+++ b/Style/Style.css
@@ -42,6 +42,10 @@ body{
     line-height: 2;
     display: grid;
     grid-template-rows: repeat(3,auto);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 @media (prefers-color-scheme: dark) {
     body { 
@@ -226,6 +230,7 @@ h4{
     text-align: center;
     font-size: 1.8rem;
     color: var(--blanco);
+    cursor: pointer;
 }
 .navegacion__enlace:hover{
     color: var(--blancoH);
