--- a/Style/Style.css
+++ b/Style/Style.css
@@ -1,6 +1,7 @@
 :root{
     --fontHeading: 'PT Sans', sans-serif;
     --fontParrafo: 'Open Sans', sans-serif;
+    --fontConsola: 'Consolas', sans-serif;
     
     --fontprimary: rgb(0, 77, 166);
     --fontsecondary: rgb(0, 32, 70);
@@ -348,6 +349,15 @@ h4{
     color: var(--blanco);
     grid-column: 1 / 6;
 }
+.areatexto {
+    font-family: var(--fontConsola);
+    outline: none;
+    background: #fff;
+    resize: none;
+    padding: 1rem;
+    grid-column: 4 / 7;
+    grid-row: 1 / 3;
+}
 .input{
     outline: none;
     min-width: 100%;
@@ -583,4 +593,22 @@ footer button:hover {
     background: crimson;
     color: white;
     cursor: pointer;
+}
+
+.ordenAlfa {
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    align-items: center;
+    gap: 2rem;
+}
+.ordenAlfa h2 {
+    width: 100%;
+    grid-column: 1 / 4;
+}
+.ordenAlfa .button1 {
+    background: rgb(14, 134, 255);
+    border: 0.2rem rgb(13, 110, 207) solid;
+}
+.ordenAlfa .button1:hover {
+    background: rgb(39, 146, 253);
 }
