--- a/Style/Style.css
+++ b/Style/Style.css
@@ -355,6 +355,7 @@ h4{
     background: #fff;
     resize: none;
     padding: 1rem;
+    border-radius: 0.4rem;
     grid-column: 4 / 7;
     grid-row: 1 / 3;
 }
