--- a/Style/Style.css
+++ b/Style/Style.css
@@ -39,7 +39,7 @@ html{
 }
 body{
     font-family: var(--fontParrafo);
-    font-size: 1.6rem;
+    font-size: 1.2rem;
     line-height: 2;
     display: grid;
     grid-template-rows: repeat(3,auto);
@@ -65,16 +65,16 @@ h1,h2,h3,h4{
     font-family: var(--fontHeading);
 }
 h1{
-    font-size: 4.8rem;
+    font-size: 4.4rem;
 }
 h2{
-    font-size: 4rem;
+    font-size: 3.6rem;
 }
 h3{
-    font-size: 3.2rem;
+    font-size: 2.8rem;
 }
 h4{
-    font-size: 2.8rem;
+    font-size: 2.4rem;
 }
 
 /*GLOBALS*/
@@ -113,6 +113,7 @@ h4{
 }
 .input-text {
     padding-top: 2rem;
+    font-size: 1.5rem;
 }
 .input-text input {
     color: var(--fontsecondary);
@@ -122,14 +123,19 @@ h4{
     border-radius: 0.4rem;
     border: var(--gris) solid 0.1rem;
 }
+.users,
+.authors,
+.books,
+.mybooks,
 .button-login {
     width: 100%;
     padding-top: 3rem;
     padding-bottom: 1rem;
+    font-size: 1.8rem;
 }
 .books,
 .authors{
-    padding-top: 8rem;
+    padding-top: 11rem;;
 }
 
 .button-login button,
@@ -340,10 +346,10 @@ h4{
     grid-column: 4 / 7;
 }
 .grafo--matriz {
-    grid-row: 1 / 5;
+    grid-row: 1 / 4;
 }
 .grafo--arbol-binario {
-    grid-row: 1 / 6;
+    grid-row: 1 / 4;
 }
 .msg {
     color: var(--blanco);
@@ -356,7 +362,7 @@ h4{
     resize: none;
     padding: 1rem;
     border-radius: 0.4rem;
-    grid-column: 4 / 7;
+    grid-column: 3 / 7;
     grid-row: 1 / 3;
 }
 .input{
@@ -416,7 +422,7 @@ h4{
 	color: var(--blanco);
 	margin: auto;
     font-family: var(--fontParrafo);
-    font-size: 4rem;
+    font-size: 3rem;
 }
 
 .users h3,
@@ -425,9 +431,8 @@ h4{
 	color: var(--blanco1);
 	margin: auto;
     font-family: var(--fontParrafo);
-    font-size: 3rem;
+    font-size: 2.2rem;
 }
-
 footer {
     display: flex;
     gap: 2rem;
@@ -506,8 +511,9 @@ footer button:hover {
 }
 .autor h5,
 .autorH h5,
-.libro h5 {
-    font-size: 1.8rem;
+.libro h5,
+.mi-libro h5 {
+    font-size: 1.4rem;
 }
 .autor p,
 .autorH p,
@@ -516,6 +522,7 @@ footer button:hover {
 .vende-libro p {
     margin: auto;
     color: var(--blanco);
+    font-size: 1.2rem;
 }
 .graphs h4,
 .mosaico h4,
@@ -533,7 +540,7 @@ footer button:hover {
 }
 .modal{
     background: var(--blanco);
-    width: 600px;
+    width: 60rem;
     height: auto;
     top: 50%;
     left: 50%;
@@ -559,7 +566,7 @@ footer button:hover {
 }
 .modal_titulo{
     color: white;
-    font-size: 40px;
+    font-size: 4rem;
     text-align: center;
     vertical-align: middle;
     background-color: crimson;
@@ -573,6 +580,7 @@ footer button:hover {
     width: 100%;
     height: 100%;
     text-align: left;
+    font-size: 1.5rem;
 }
 .modal_botones{
     width: 100%;    
@@ -609,7 +617,13 @@ footer button:hover {
 .ordenAlfa .button1 {
     background: rgb(14, 134, 255);
     border: 0.2rem rgb(13, 110, 207) solid;
+    font-size: 1.8rem;
 }
 .ordenAlfa .button1:hover {
     background: rgb(39, 146, 253);
+}
+
+.binarytreeAdmin {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
