--- a/Style/Style.css
+++ b/Style/Style.css
@@ -135,7 +135,7 @@ h4{
 }
 .books,
 .authors{
-    padding-top: 11rem;;
+    padding-top: 9rem;;
 }
 
 .button-login button,
@@ -191,7 +191,7 @@ h4{
     }
 }
 .barra{
-    padding: 1rem 10rem;
+    padding: 0 10rem;
     background-color: var(--primary);
 }
 @media (min-width: 768px) {
@@ -318,25 +318,22 @@ h4{
         column-gap: 2rem;
     }
     .mosaico {
-        padding: 2rem;
         display: grid;
+        padding-bottom: 2rem;
         /*grid-template-columns: 50% 50%;
         grid-template-columns: repeat(2, 50%);
         grid-template-columns: 1fr 1fr;*/
         grid-template-columns: repeat(6,1fr);
-        column-gap: 1rem;
-        row-gap: 1rem;
+        gap: 0.6rem;
         align-content: flex-start;
     }
     .mosaicotop {
-        padding: 2rem;
         display: grid;
         /*grid-template-columns: 50% 50%;
         grid-template-columns: repeat(2, 50%);
         grid-template-columns: 1fr 1fr;*/
         grid-template-columns: repeat(5,1fr);
-        column-gap: 1rem;
-        row-gap: 1rem;
+        gap: 0.6rem;
         align-content: flex-start;
     }
 }
@@ -349,7 +346,7 @@ h4{
     grid-row: 1 / 4;
 }
 .grafo--arbol-binario {
-    grid-row: 1 / 4;
+    grid-row: 1 / 5;
 }
 .msg {
     color: var(--blanco);
@@ -409,7 +406,7 @@ h4{
 
 .bodyCharge {
     width: 100%;
-    padding: 8rem 8rem 0 8rem;
+    padding: 6rem 6rem 0 6rem;
     display: grid;
     flex-direction: row;
     row-gap: 1rem;
@@ -432,6 +429,45 @@ h4{
 	margin: auto;
     font-family: var(--fontParrafo);
     font-size: 2.2rem;
+}
+.users h4,
+.authors h4,
+.authorH h4,
+.books h4,
+.mi-libro h4 {
+	color: var(--blanco1);
+	margin: auto;
+    font-family: var(--fontParrafo);
+    font-size: 1.6rem;
+}
+.autor h5,
+.autorH h5,
+.libro h5,
+.mi-libro h5 {
+    font-size: 1.2rem;
+}
+.autor h4,
+.autor h5,
+.autorH h4,
+.autorH h5,
+.libro h4,
+.libro h5,
+.mi-libro h4,
+.mi-libro h5,
+.vende-libro h4,
+.vende-libro h5 {
+    margin: auto;
+    color: var(--blanco);
+    text-align: center;
+}
+.autor p,
+.autorH p,
+.libro p,
+.mi-libro p,
+.vende-libro p {
+    margin: auto;
+    color: var(--blanco);
+    font-size: 1.2rem;
 }
 footer {
     display: flex;
@@ -459,7 +495,7 @@ footer button:hover {
     background-color: var(--morado);
     border-radius: 0.4rem;
     border: var(--morado1) solid 0.2rem;
-    padding: 1rem 1.2rem 1rem 1.5rem;
+    padding: 0.2rem 1rem;
     cursor: pointer;
     height: 100%;
     text-align: center;
@@ -468,7 +504,7 @@ footer button:hover {
     background-color: var(--morado);
     border-radius: 0.4rem;
     border: var(--morado1) solid 0.2rem;
-    padding: 1rem 1.2rem 1rem 1.5rem;
+    padding: 0.2rem 1rem;
     height: 100%;
     text-align: center;
 }
@@ -476,7 +512,7 @@ footer button:hover {
     background-color: var(--naranja);
     border-radius: 0.4rem;
     border: var(--naranja1) solid 0.2rem;
-    padding: 1rem 1.2rem 1rem 1.5rem;
+    padding: 0.2rem 1rem;
     cursor: pointer;
     height: 100%;
 }
@@ -484,50 +520,16 @@ footer button:hover {
     background-color: var(--agua);
     border-radius: 0.4rem;
     border: var(--agua1) solid 0.2rem;
-    padding: 1rem 1.2rem 1rem 1.5rem;
+    padding: 0.2rem 1rem;
     height: 100%;
 }
 .vende-libro {
     background-color: var(--celeste);
     border-radius: 0.4rem;
     border: var(--celeste1) solid 0.2rem;
-    padding: 1rem 1.2rem 1rem 1.5rem;
+    padding: 0.2rem 1rem;
     cursor: pointer;
     height: 100%;
-}
-.autor h4,
-.autor h5,
-.autorH h4,
-.autorH h5,
-.libro h4,
-.libro h5,
-.mi-libro h4,
-.mi-libro h5,
-.vende-libro h4,
-.vende-libro h5 {
-    margin: auto;
-    color: var(--blanco);
-    text-align: center;
-}
-.autor h5,
-.autorH h5,
-.libro h5,
-.mi-libro h5 {
-    font-size: 1.4rem;
-}
-.autor p,
-.autorH p,
-.libro p,
-.mi-libro p,
-.vende-libro p {
-    margin: auto;
-    color: var(--blanco);
-    font-size: 1.2rem;
-}
-.graphs h4,
-.mosaico h4,
-.mosaicotop h4 {
-    color: var(--blanco);
 }
 .fondo_transparente{
     top: 0;
